--- a/_includes/post.html
+++ b/_includes/post.html
@@ -28,7 +28,7 @@
     <!-- TOC 스타일시트 및 스크립트 로드 -->
     <link rel="stylesheet" href="{{ '/assets/css/toc.css' | relative_url }}">
     <script src="{{ '/assets/js/toc.js' | relative_url }}" defer></script>
-    
+
     <!-- 진행률 링 -->
     <div class="progress-ring-container" id="progress-ring-container">
       <svg class="progress-ring" width="60" height="60">
@@ -47,7 +47,7 @@
     <!-- 확장형 TOC -->
     <div class="floating-toc modern" id="floating-toc">
       <div class="toc-header">
-        <div class="toc-title">📚 목차</div>
+        <div class="toc-title">목차</div>
       </div>
       <nav id="toc-nav">
         <!-- 목차는 JavaScript로 생성됩니다 -->
