[Post] 사이드바 수정

--- a/_includes/my-head.html
+++ b/_includes/my-head.html
@@ -1,3 +1,6 @@
+<!-- Sidebar Toggle Script -->
+<script src="{{ '/assets/js/sidebar-toggle.js' | relative_url }}?v={{ site.time | date: '%s' }}"></script>
+
 {% comment %}
 <!--
 Using `preload` so that page rendering doesn't get blocked.
