--- a/_layouts/landing.html
+++ b/_layouts/landing.html
@@ -7,7 +7,7 @@
   <title>{{ page.title | default: site.title }}</title>
   <meta name="description" content="{{ page.description | default: site.description }}">
   
-  <link rel="stylesheet" href="{{ '/assets/css/landing.css' | relative_url }}">
+  <link rel="stylesheet" href="{{ '/assets/css/landing.css' | relative_url }}?v={{ site.time | date: '%s' }}">
 </head>
 <body class="landing-page">
   <!-- Bio Background -->
