--- a/_layouts/vision.html
+++ b/_layouts/vision.html
@@ -7,8 +7,8 @@
   <title>{{ page.title | default: site.title }}</title>
   <meta name="description" content="{{ page.description | default: site.description }}">
 
-  <link rel="stylesheet" href="{{ '/assets/css/main.css' | relative_url }}">
-  <link rel="stylesheet" href="{{ '/assets/css/vision.css' | relative_url }}">
+  <link rel="stylesheet" href="{{ '/assets/css/main.css' | relative_url }}?v={{ site.time | date: '%s' }}">
+  <link rel="stylesheet" href="{{ '/assets/css/vision.css' | relative_url }}?v={{ site.time | date: '%s' }}">
 </head>
 <body class="vision-page">
   <nav class="vision-nav">
