--- a/_includes/about.html
+++ b/_includes/about.html
@@ -1,8 +1,29 @@
-{% assign author = site.data.authors[page.author] | default:site.data.authors.first[1] | default:site.author %}
-
-{% if author.about %}
-  <aside class="about related mt4 mb4" role="complementary">
-    {% assign about_heading = site.data.strings.about | default:"About" %}
-    {% include author.html author=author heading=about_heading heading_tag='h2' %}
-  </aside>
-{% endif %}
+<section class="hero is-fullheight has-text-centered has-background-white-ter" id="about">
+    <div class="hero-body">
+        <div class="container">
+            <div class="columns">
+                <div class="column is-one-fifth-desktop is-one-fifth-tablet is-one-fifth-fullhd">
+                    <figure class="image">
+                        <img class="is-rounded" src="{{site.author-image}}" alt="{{site.author-name}}">
+                    </figure>
+                </div>
+                <div class="column has-text-left-desktop has-text-left-tablet has-text-left-fullhd has-text-left-widescreen">
+                    <p>{{site.author-about}}</p>
+                    <br>
+                    <div class="container columns is-centered">
+                        <div>
+                            <a href="{{site.url}}{{site.baseurl}}/#contact"
+                                class="button is-rounded is-uppercase has-text-weight-normal is-black is-outlined">Contact
+                                Me</a>
+                            </a>
+                        </div>
+                        <div>
+                            <a href="{{site.url}}{{site.baseurl}}/blog"
+                                class="button is-rounded is-uppercase has-text-weight-normal is-black is-outlined">Blog</a>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+</section>
