--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,5 +1,7 @@
-{% include head/meta.html %}
-{% include head/links.html %}
-{% include head/scripts.html %}
-{% include head/styles.html %}
-{% include my-head.html %}
+<head>
+    {% include meta.html %}
+    <title>{{site.title}}</title>
+    <link rel="stylesheet" href="{% if site.baseurl %}{{site.baseurl}}{% else %}{% endif %}/assets/css/style.css">
+    <script src="https://kit.fontawesome.com/6a97161b76.js" crossorigin="anonymous"></script>
+    <link rel="shortcut icon" href="{% if site.favicon-url %}{{site.favicon-url}}{% else %}{{ 'assets/images/logo.png' | absolute_url }}{% endif %}" type="image/x-icon">
+</head>
